v1.1.0/modules/schema/pages/class/CIGREStandard.adoc
= `CIGREStandard`
:toclevels: 4


+++Standard published by CIGRE (Council on Large Electric Systems).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CIGREStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`CIGREStandard`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<standardEdition,`standardEdition`>>
//| [[slots_table.standardEdition]]<<standardEdition,`standardEdition`>>
| 0..1 +
xref::enumeration/CIGREStandardEditionKind.adoc[`CIGREStandardEditionKind`]
| +++Edition of CIGRE standard.+++
| _n/a_

| <<standardNumber,`standardNumber`>>
//| [[slots_table.standardNumber]]<<standardNumber,`standardNumber`>>
| 0..1 +
xref::enumeration/CIGREStandardKind.adoc[`CIGREStandardKind`]
| +++CIGRE standard number.+++
| _n/a_
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of CIGRE standard.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CIGREStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/CIGREStandardEditionKind.adoc[`CIGREStandardEditionKind`]


|===

////
[.text-left]
--
<<slots_table.standardEdition,&#10548;>>
--
////


//[discrete]
[#standardNumber]
=== `standardNumber`
+++CIGRE standard number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CIGREStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/CIGREStandardKind.adoc[`CIGREStandardKind`]


|===

////
[.text-left]
--
<<slots_table.standardNumber,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TestStandard.adoc[`TestStandard`] | xref::class/TestStandard.adoc#testStandardCIGRE[`testStandardCIGRE`]


|===

